SERVER-10152 SERVER-9686 Validate arguments to BinData/HexData constructors